--- a/groc/index.html
+++ b/groc/index.html
@@ -20,12 +20,12 @@ but I need the rights from Myfox to do it, to finally have:</p>
 <li>the stability of the website (evolutions will have to be reported here),</li>
 <li>the custom policy you indicate (HTML only, HTML first, Rest first, Rest only)</li>
 </ul>
-<p>(Please see the Quick Start guide below, or the <a href="https://github.com/gxapplications/myfox-wrapper-api/wiki/Start-from-here!">Wiki Documentation</a> to understand the strategy of the system)</p>
+<p>(Please see the Quick Start guide below, or the <a href="https://github.com/gxapplications/myfox-wrapper-api/wiki">Wiki Documentation</a> to understand the strategy of the system)</p>
 <h4 id="and-for-the-bonus-we-add-macro-features">And for the bonus, we add macro features!</h4>
 <p>To let you control Myfox services in time (e.g.: schedule a scenario call 60 minutes after another scenario call, with programmable conditions to cancel a scheduled task; planify changes in a scenario configuration depending on day time, like maximum and minimum temperatures in a complex scenario; ...)</p>
 <hr>
 <h2 id="quick-start-guide">Quick Start guide</h2>
-<p>(For a full install guide, please go to the <a href="https://github.com/gxapplications/myfox-wrapper-api/wiki/Start-from-here!">Wiki home page</a>)</p>
+<p>(For a full install guide, please go to the <a href="https://github.com/gxapplications/myfox-wrapper-api/wiki">Wiki home page</a>)</p>
 <h6 id="to-use-myfox-wrapper-api-as-a-library-or-stand-alone-api-server-in-your-own-project-just-install-it-as-dependency">To use myfox-wrapper-api as a library or stand-alone API server in your own project, just install it as dependency:</h6>
 <pre><code class="lang-bash">npm install --save myfox-wrapper-api</code></pre>
 <p><em>To contribute to the myfox-wrapper-api project as a developer, you should clone the repository, and follow the <a href="CONTRIBUTING.md">CONTRIBUTING.md</a> document.</em></p>
@@ -44,6 +44,14 @@ The default built-in server is made over hapi. There is an express server for ex
 <hr>
 <h2 id="use-this-project-as-a-library">Use this project as a library</h2>
 <p><code>TODO</code> direct use as library (not the included server, so how to dev)</p>
+<hr>
+<h2 id="read-the-documentations-now">Read the documentations now</h2>
+<ul>
+<li>If you like Groc and literal coding concept: <a href="http://gxapplications.github.io/myfox-wrapper-api/groc/">Groc documentation</a></li>
+<li>If you prefer jsdoc: <code>TODO</code></li>
+<li>If you need more information: <a href="https://github.com/gxapplications/myfox-wrapper-api/wiki">Wiki home page</a></li>
+<li>To follow Test improvements: <a href="http://gxapplications.github.io/myfox-wrapper-api/coverage/lcov-report/">Code coverage</a></li>
+</ul>
 <hr>
 <h2 id="license">License</h2>
 <p><a href="LICENSE">MIT license</a></p></div></div></div></div></body></html>
