// Home parsing, finished (still tests)

--- a/test/lib/html-parsers/mock.html
+++ b/test/lib/html-parsers/mock.html
@@ -5,6 +5,8 @@
   </head>
   <body>
     <p id="test1">my text</p>
+    <p id="test1b">
+	my text   </p>
     <p id="test2" class="class_test_1 class_test_2">my text</p>
   </body>
 </html>
