--- a/groc/index.html
+++ b/groc/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html><html lang="en"><head><title>index</title></head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"><meta name="groc-relative-root" content=""><meta name="groc-document-path" content="index"><meta name="groc-project-path" content="README.md"><link rel="stylesheet" type="text/css" media="all" href="assets/style.css"><script type="text/javascript" src="assets/behavior.js"></script><body><div id="meta"><div class="file-path">README.md</div></div><div id="document"><div class="segment"><div class="comments "><div class="wrapper"><p><img src="https://raw.githubusercontent.com/gxapplications/myfox-wrapper-api/master/lib/assets/logo.png" alt="myfox-wrapper-logo"></p>
 <p><em>An API layer to Myfox services to add easy usable features &amp; tools, written in NodeJS.</em></p>
-<p><strong>This repository is for now empty. A first version will come in several weeks.</strong></p>
-<p><a href="http://travis-ci.org/gxapplications/myfox-wrapper-api"><img src="https://secure.travis-ci.org/gxapplications/myfox-wrapper-api.png" alt="Build Status"></a>
-<a href="http://standardjs.com/"><img src="https://img.shields.io/badge/code%20style-standard-brightgreen.svg" alt="js-standard-style"></a></p>
-<p>[npm versions and downloads from NPM - TODO]</p>
+<p><strong>The first release (v0.0.1) is a working version of a minimalist lib. Not ready for production for now.</strong></p>
+<p><a href="http://travis-ci.org/gxapplications/myfox-wrapper-api"><img src="https://travis-ci.org/gxapplications/myfox-wrapper-api.svg" alt="Build Status"></a>
+<a href="http://standardjs.com/"><img src="https://img.shields.io/badge/code%20style-standard-brightgreen.svg" alt="js-standard-style"></a>
+<a href="https://npmjs.org/package/myfox-wrapper-api"><img src="https://img.shields.io/npm/v/myfox-wrapper-api.svg" alt="NPM Version"></a>
+<a href="https://npmjs.org/package/myfox-wrapper-api"><img src="https://img.shields.io/npm/dm/myfox-wrapper-api.svg" alt="NPM Downloads">)</a></p>
 <h2 id="what">What</h2>
 <p>This API layer will serve you full control over a Myfox service (alarm and domotics), calling basic features through official html website (parsing data retrieved by a curl robot), and will add many features (mainly precoded macro features).</p>
 <h4 id="why-to-not-use-rest-api">Why to not use Rest API?</h4>
@@ -48,7 +49,7 @@ The default built-in server is made over hapi. There is an express server for ex
 <h2 id="read-the-documentations-now">Read the documentations now</h2>
 <ul>
 <li>If you like Groc and literal coding concept: <a href="http://gxapplications.github.io/myfox-wrapper-api/groc/">Groc documentation</a></li>
-<li>If you prefer jsdoc: <code>TODO</code></li>
+<li>If you prefer jsdoc: <a href="https://htmlpreview.github.io/?https://github.com/gxapplications/myfox-wrapper-api/blob/gh-pages/jsdoc/myfox-wrapper-api/0.0.1/index.html">jsdoc documentation</a></li>
 <li>If you need more information: <a href="https://github.com/gxapplications/myfox-wrapper-api/wiki">Wiki home page</a></li>
 <li>To follow Test improvements: <a href="http://gxapplications.github.io/myfox-wrapper-api/coverage/lcov-report/">Code coverage</a></li>
 </ul>
