--- a/groc/index.html
+++ b/groc/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html><html lang="en"><head><title>index</title></head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"><meta name="groc-relative-root" content=""><meta name="groc-document-path" content="index"><meta name="groc-project-path" content="README.md"><link rel="stylesheet" type="text/css" media="all" href="assets/style.css"><script type="text/javascript" src="assets/behavior.js"></script><body><div id="meta"><div class="file-path">README.md</div></div><div id="document"><div class="segment"><div class="comments "><div class="wrapper"><p><img src="https://raw.githubusercontent.com/gxapplications/myfox-wrapper-api/master/lib/assets/logo.png" alt="myfox-wrapper-logo"></p>
 <p><em>An API layer to Myfox services to add easy usable features &amp; tools, written in NodeJS.</em></p>
-<p><strong>The first release (v0.0.1) is a working version of a minimalist lib. Not ready for production for now.</strong></p>
+<p><strong>The current release is a working version of a minimalist lib. Not ready for production for now.</strong></p>
 <p><a href="http://travis-ci.org/gxapplications/myfox-wrapper-api"><img src="https://travis-ci.org/gxapplications/myfox-wrapper-api.svg" alt="Build Status"></a>
 <a href="http://standardjs.com/"><img src="https://img.shields.io/badge/code%20style-standard-brightgreen.svg" alt="js-standard-style"></a>
-<a href="https://npmjs.org/package/myfox-wrapper-api"><img src="https://img.shields.io/npm/v/myfox-wrapper-api.svg" alt="NPM Version"></a>
-<a href="https://npmjs.org/package/myfox-wrapper-api"><img src="https://img.shields.io/npm/dm/myfox-wrapper-api.svg" alt="NPM Downloads">)</a></p>
+<a href="https://github.com/gxapplications/myfox-wrapper-api/releases"><img src="https://img.shields.io/github/release/gxapplications/myfox-wrapper-api.svg" alt="Github release"></a></p>
+<p><a href="https://npmjs.org/package/myfox-wrapper-api"><img src="https://img.shields.io/node/v/myfox-wrapper-api.svg" alt="node"></a>
+<a href="https://npmjs.org/package/myfox-wrapper-api"><img src="https://img.shields.io/npm/dt/myfox-wrapper-api.svg" alt="NPM Downloads"></a>
+<a href="https://github.com/gxapplications/myfox-wrapper-api/blob/master/LICENSE"><img src="https://img.shields.io/npm/l/myfox-wrapper-api.svg" alt="MIT license"></a></p>
 <h2 id="what">What</h2>
 <p>This API layer will serve you full control over a Myfox service (alarm and domotics), calling basic features through official html website (parsing data retrieved by a curl robot), and will add many features (mainly precoded macro features).</p>
 <h4 id="why-to-not-use-rest-api">Why to not use Rest API?</h4>
