still not working...

--- a/test/lib/html-parsers/mock-scenario-edition-third-step-full-1.html
+++ b/test/lib/html-parsers/mock-scenario-edition-third-step-full-1.html
@@ -167,8 +167,8 @@
 
     <div class="condition condition-3 option-block" data-triggertype="3">
       <div class="title">
-        <span class="input-checkbox condition-choice condition-3-choice" data-default=""><span class="icon">
-          <input type="checkbox" name="_condition_3" value="3" checked="checked" />
+        <span class="input-checkbox condition-choice condition-3-choice" data-default="3"><span class="icon">
+          <input type="checkbox" name="_condition_3" value="3" />
         </span></span>
       </div>
       <div class="item condition-inputs security-level">
@@ -194,8 +194,8 @@
 
     <div class="condition condition-1 option-block" data-triggertype="1">
       <div class="title">
-        <span class="input-checkbox condition-choice condition-1-choice" data-default=""><span class="icon">
-          <input type="checkbox" name="_condition_1" value="1" checked="checked" />
+        <span class="input-checkbox condition-choice condition-1-choice" data-default="1"><span class="icon">
+          <input type="checkbox" name="_condition_1" value="1" />
         </span></span>
       </div>
       <div class="item condition-inputs">
@@ -224,7 +224,7 @@
     <div class="condition condition-4 option-block" data-triggertype="4">
       <div class="title">
         <span class="input-checkbox condition-choice condition-Limited 4-1" data-default="4"><span class="icon">
-          <input type="checkbox" name="_condition_4_1" value="4" checked="checked" />
+          <input type="checkbox" name="_condition_4_1" value="4" />
         </span></span>
         <span>Si la température...</span>
       </div>
@@ -246,7 +246,7 @@
         <div class="condition choice-4-2">
           <div class="title">
             <span class="input-checkbox condition-choice condition-Limited 4-2" data-default="4"><span class="icon">
-              <input type="checkbox" name="_condition_4_2" value="4" checked="checked" />
+              <input type="checkbox" name="_condition_4_2" value="4" />
             </span></span>
             <span>Et si la température...</span>
           </div>
@@ -270,8 +270,8 @@
 
     <div class="condition condition-5 option-block" data-triggertype="5">
       <div class="title">
-        <span class="input-checkbox condition-choice condition-Limited 5-1" data-default=""><span class="icon">
-          <input type="checkbox" name="_condition_5_1" value="5" checked="checked" />
+        <span class="input-checkbox condition-choice condition-Limited 5-1" data-default="5"><span class="icon">
+          <input type="checkbox" name="_condition_5_1" value="5" />
         </span></span>
         <span>Si la luminosité...</span>
       </div>
@@ -296,8 +296,8 @@
         </div>
         <div class="condition choice-5-2">
           <div class="title">
-            <span class="input-checkbox condition-choice condition-Limited 5-2" data-default=""><span class="icon">
-              <input type="checkbox" name="_condition_5_2" value="5" checked="checked" />
+            <span class="input-checkbox condition-choice condition-Limited 5-2" data-default="5"><span class="icon">
+              <input type="checkbox" name="_condition_5_2" value="5" />
             </span></span>
           </div>
           <div class="item condition-inputs"> ... du capteur
