--- a/test/lib/html-parsers/mock-scenario-edition-third-step-full-3.html
+++ b/test/lib/html-parsers/mock-scenario-edition-third-step-full-3.html
@@ -223,7 +223,7 @@
 
     <div class="condition condition-4 option-block" data-triggertype="4">
       <div class="title">
-        <span class="input-checkbox condition-choice condition-Limited 4-1" data-default="4"><span class="icon">
+        <span class="input-checkbox condition-choice condition-Limited 4-1" data-default=""><span class="icon">
           <input type="checkbox" name="_condition_4_1" value="4" />
         </span></span>
         <span>Si la température...</span>
@@ -245,7 +245,7 @@
         </div>
         <div class="condition choice-4-2">
           <div class="title">
-            <span class="input-checkbox condition-choice condition-Limited 4-2" data-default="4"><span class="icon">
+            <span class="input-checkbox condition-choice condition-Limited 4-2" data-default=""><span class="icon">
               <input type="checkbox" name="_condition_4_2" value="4" />
             </span></span>
             <span>Et si la température...</span>
